# Prowiz

./: README.md
task3/: README.md  pyproject.toml  requirements.txt
task3/app/: main.py
task3/app/api/v1/: router.py
task3/app/schema/: dto.py
task3/app/services/: task.py
task4/: README.md  pyproject.toml  requirements.txt
task4/config/: paths.py  schema.py  settings.py
task4/data/processed/: customers_clean.parquet  exchange_rates_clean.parquet  products_clean.parquet  sales_clean.parquet  stores_clean.parquet
task4/docs/: 00_EXECUTION_STEPS.md  01_CLEANING_DECISIONS.md  02_PHASE2_VALIDATION_RESULTS.md  03_PHASE3_RESULTS.md  04_EDA_FINDINGS.md
task4/notebooks/: 01_customers_analysis.ipynb  02_product_analysis.ipynb  03_sales_analysis.ipynb  04_store_analysis.ipynb  05_revenue_analysis.ipynb  06_revenue_decline_seasonal.ipynb  07_premium_analysis.ipynb  08_store_performance.ipynb
task4/outputs/reports/: phase2_validation.json
task4/src/: check_delivery_days.py  check_online_consistency.py  check_pending_deliveries.py  loader.py  reporter.py  run_phase2.py  run_phase3.py  validator.py
task4/src/analysis/: customers.py  decline.py  helpers.py  premium.py  products.py  revenue.py  sales.py  store_perf.py  stores.py
task4/src/checks/: date.py  delivery.py  duplicate.py  foreign_key.py  future_date.py  negative.py  null.py  outlier.py  range.py  schema.py
task4/src/cleaning/: customers.py  exchange_rates.py  products.py  sales.py  stores.py
task4/src/transform/: currency.py
task4/src/utils/: helpers.py
task4/src/viz/: base.py  style.py
(+29 files in other folders)
