[project]
name = "task3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "fastapi-utils>=0.8.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "typing-inspect>=0.9.0",
    "uvicorn[standard]>=0.41.0",
]
