[project]
name = "task4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.20.0",
    "jupyter>=1.0.0",
    "kaleido>=0.2.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=5.20.0",
    "pyarrow>=15.0.0",
    "seaborn>=0.13.0",
    "streamlit>=1.53.1",
]


[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]